30-Oct-2014 Relative package roots from definition files are now resolved to the package directory, not the working directory.

26-Oct-2014 Added QtCommon-5.x, and Qt-5.1.1, Qt-5.2.0, Qt-5.3.1 packages.

26-Oct-2014 Reversioned package QtCommon-dev to QtCommon-4.x.

11-Sep-2014 Added -pedantic command line option, to enable pedantic validation during dependency graph generation. Default is disabled.

08-Sep-2014 Non-keyword arguments to the Python test runner, of the form x.version=MMM will be added as arguments to each BuildAMation command line run as -x.version=MMM. Useful for things like the WindowsSDK.

07-Sep-2014 Bumped supported version of bam and Bam.Core assemblies to v4.0.

07-Sep-2014 Use the version of the CLR runtime to choose the CSharp compiler used to build the assembly of packages.

30-Aug-2014 Changed the use of a // StateOnly comment to a proper attribute [Bam.Core.ValueOnlyOption] to indicate an option property has no delegates - it is a just a value.

28-Aug-2014 While resolving packages with multiple versions down to one, if others have been cast aside before, ignore any of their dependencies when considering new packages. This allows two package versions to have different dependent package versions, and the one that wins, discards their version of the dependent from later consideration.

28-Aug-2014 Added new action, -setdescription, to set the optional description of a package in the definition file (leave empty to unset). Updated existing schema since it's an optional addition.

28-Aug-2014 Added a new field attribute, Bam.Core.SiblingModulesAttribute. This can be used, in place of Bam.Core.RequiredModulesAttribute, to indicate that other modules should be considered as siblings, so if the primary module is a top level (i.e. in the package bam is started in), then so are it's siblings. Allows other modules to built alongside, but not be forced to have an explicit requirement.
