@@ -1,0 +1,11 @@
+#region License
+// <copyright>
+//  Mark Final
+// </copyright>
+// <author>Mark Final</author>
+#endregion // License
+[assembly: Bam.Core.RegisterToolset("Qt", typeof(Qt.Toolset))]
+
+namespace Qt
+{
+}
