@@ -1,0 +1,23 @@
+<?xml version="1.0" encoding="utf-8"?>
+<PackageDefinition xsi:schemaLocation="http://www.buildamation.com ./Schema/BamPackageDefinitionV1.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://www.buildamation.com">
+  <RequiredPackages>
+    <Package Name="ICU">
+      <Version Id="52" />
+    </Package>
+    <Package Name="QtCommon">
+      <Version Id="5.x" />
+    </Package>
+  </RequiredPackages>
+  <RequiredBamAssemblies>
+    <BamAssembly Name="Bam.Core" />
+  </RequiredBamAssemblies>
+  <RequiredDotNetAssemblies>
+    <DotNetAssembly Name="System" RequiredTargetFramework="2.0.50727" />
+    <DotNetAssembly Name="System.Xml" RequiredTargetFramework="2.0.50727" />
+  </RequiredDotNetAssemblies>
+  <SupportedPlatforms>
+    <Platform Name="Windows" />
+    <Platform Name="Unix" />
+    <Platform Name="OSX" />
+  </SupportedPlatforms>
+</PackageDefinition>
