@@ -1,0 +1,92 @@
+#region License
+// <copyright>
+//  Mark Final
+// </copyright>
+// <author>Mark Final</author>
+#endregion // License
+namespace Qt
+{
+    public sealed class Phonon :
+        QtCommon.Phonon
+    {}
+
+    public sealed class Core :
+        QtCommon.Core
+    {}
+
+    public sealed class DBus :
+        QtCommon.DBus
+    {}
+
+    public sealed class Declarative :
+        QtCommon.Declarative
+    {}
+
+    public sealed class Designer :
+        QtCommon.Designer
+    {}
+
+    public sealed class Gui :
+        QtCommon.Gui
+    {}
+
+    public sealed class Help :
+        QtCommon.Help
+    {}
+
+    public sealed class Multimedia :
+        QtCommon.Multimedia
+    {}
+
+    public sealed class Network :
+        QtCommon.Network
+    {}
+
+    public sealed class OpenGL :
+        QtCommon.OpenGL
+    {}
+
+    public sealed class OpenVG :
+        QtCommon.OpenVG
+    {}
+
+    public sealed class Script :
+        QtCommon.Script
+    {}
+
+    public sealed class ScriptTools :
+        QtCommon.ScriptTools
+    {}
+
+    public sealed class Sql :
+        QtCommon.Sql
+    {}
+
+    public sealed class Svg :
+        QtCommon.Svg
+    {}
+
+    public sealed class Test :
+        QtCommon.Test
+    {}
+
+    public sealed class UiTools :
+        QtCommon.UiTools
+    {}
+
+    public sealed class WebKit :
+        QtCommon.WebKit
+    {}
+
+    public sealed class Widgets :
+        QtCommon.Widgets
+    {}
+
+    public sealed class Xml :
+        QtCommon.Xml
+    {}
+
+    public sealed class XmlPatterns :
+        QtCommon.XmlPatterns
+    {}
+}
